{
  "version": 4,
  "terraform_version": "0.12.4",
  "serial": 278,
  "lineage": "eaf04f5a-8d14-1b17-bc71-4352ad167658",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2176987ee50226e",
            "arn": "arn:aws:ec2:us-west-2:152635422557:instance/i-0fce41bcdc04476e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fce41bcdc04476e7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "monitoring": false,
            "primary_network_interface_id": "eni-093e703d14f609f2c",
            "private_dns": "ip-10-0-1-202.us-west-2.compute.internal",
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-54-201-124-1.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.124.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-010a695ee384a8344",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0fecae85d3c800f11",
            "tags": {
              "Name": "qawebserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02f01910f6777d54f"
            ]
          },
          "depends_on": [
            "aws_security_group.web",
            "aws_subnet.public-subnet-in-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "defaultgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0426a6feb7ca95896",
            "owner_id": "152635422557",
            "tags": {
              "Name": "qa Gateway"
            },
            "vpc_id": "vpc-0f53aa1ba8a156c3c"
          },
          "depends_on": [
            "aws_vpc.defaultvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet-in-us-west-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f5cd51825bd633f3",
            "owner_id": "152635422557",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0426a6feb7ca95896",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA public subnet"
            },
            "vpc_id": "vpc-0f53aa1ba8a156c3c"
          },
          "depends_on": [
            "aws_internet_gateway.defaultgw",
            "aws_vpc.defaultvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tableass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5710b8c703e8cde",
            "route_table_id": "rtb-0f5cd51825bd633f3",
            "subnet_id": "subnet-0fecae85d3c800f11"
          },
          "depends_on": [
            "aws_route_table.public-subnet-in-us-west-2",
            "aws_subnet.public-subnet-in-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:152635422557:security-group/sg-0c9452ffb9940c31e",
            "description": "NAT security group for QA",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0c9452ffb9940c31e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_nat",
            "name_prefix": null,
            "owner_id": "152635422557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NATSGQA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f53aa1ba8a156c3c"
          },
          "depends_on": [
            "aws_vpc.defaultvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:152635422557:security-group/sg-02f01910f6777d54f",
            "description": "Accept incoming connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-02f01910f6777d54f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_web",
            "name_prefix": null,
            "owner_id": "152635422557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QAWebServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f53aa1ba8a156c3c"
          },
          "depends_on": [
            "aws_vpc.defaultvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-in-us-west-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:152635422557:subnet/subnet-0fecae85d3c800f11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fecae85d3c800f11",
            "map_public_ip_on_launch": false,
            "owner_id": "152635422557",
            "tags": {
              "Name": "QA public subnet"
            },
            "vpc_id": "vpc-0f53aa1ba8a156c3c"
          },
          "depends_on": [
            "aws_vpc.defaultvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "defaultvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:152635422557:vpc/vpc-0f53aa1ba8a156c3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-0f3b88c4866aa899e",
            "default_route_table_id": "rtb-052e613e61e000eb4",
            "default_security_group_id": "sg-004bb1f3613d58456",
            "dhcp_options_id": "dopt-ad55ffd5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f53aa1ba8a156c3c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-052e613e61e000eb4",
            "owner_id": "152635422557",
            "tags": {
              "Name": "terraform-aws-vpc_qa"
            }
          }
        }
      ]
    }
  ]
}